--- a/SVG_Handler/CMakeLists.txt
+++ b/SVG_Handler/CMakeLists.txt
@@ -3,14 +3,16 @@ cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 project(SVG_Handler LANGUAGES CXX)
 
 set(PROGRAM_NAME svg_handler_cli)
+set(LIBRARY_NAME svg_handler)
 
 set(CMAKE_CXX_STANDARD 26)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF) 
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 include_directories(include)
 
-add_library(svg_handler_lib
+# ========== Core Library ==========
+add_library(${LIBRARY_NAME} SHARED
   src/svg_handler.cpp
   src/svg_reader.cpp
   src/string_utils.cpp
@@ -18,35 +20,29 @@ add_library(svg_handler_lib
   src/csv_exporter.cpp
 )
 
-set(RESOURCE_FILES
-  resources/sample.svg
+set_target_properties(${LIBRARY_NAME} PROPERTIES
+    OUTPUT_NAME ${LIBRARY_NAME}
+    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
+    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
 )
 
-file(GLOB RESOURCE_FILES "resources/*")
-file(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/resources)
-
-# Main Executable (CLI)
+# ========== CLI Executable ==========
 add_executable(${PROGRAM_NAME} cli/main.cpp)
-target_link_libraries(${PROGRAM_NAME} svg_handler_lib)
-
-add_custom_target(run
-    COMMAND ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/resources/sample.svg
-    DEPENDS ${PROGRAM_NAME}
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-)
-
+target_link_libraries(${PROGRAM_NAME} PRIVATE ${LIBRARY_NAME})
 set_target_properties(${PROGRAM_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/cli
 )
 
-# Test All
+# ========== Tests ==========
 add_executable(${PROGRAM_NAME}_test tests/test.cpp)
-target_link_libraries(${PROGRAM_NAME}_test svg_handler_lib)
-
+target_link_libraries(${PROGRAM_NAME}_test ${LIBRARY_NAME})
 add_custom_target(test_run
     COMMAND ${PROGRAM_NAME}_test
     DEPENDS ${PROGRAM_NAME}_test
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+set_target_properties(${PROGRAM_NAME}_test PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
 )
 
 # Test using internal modules
@@ -66,9 +62,12 @@ foreach(MODULE_NAME IN LISTS INTERNAL_TEST_MODULES)
         DEPENDS ${EXEC_NAME}
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
     )
+    set_target_properties(${EXEC_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+)
 endforeach()
 
-# Qt GUI
+# ========== Qt6 GUI ==========
 set(QT_MIN_VERSION "6.5.0")
 find_package(Qt6 ${QT_MIN_VERSION} COMPONENTS Widgets REQUIRED)
 
@@ -84,12 +83,11 @@ set(QTGUI_SOURCES
 )
 
 set(QTGUI_EXEC_NAME svg_handler_qt)
-
 qt_add_executable(${QTGUI_EXEC_NAME} ${QTGUI_SOURCES})
 
 target_link_libraries(${QTGUI_EXEC_NAME}
     PRIVATE
-        svg_handler_lib
+        ${LIBRARY_NAME}
         Qt6::Widgets
 )
 
@@ -108,7 +106,7 @@ set_target_properties(${QTGUI_EXEC_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gui_qt
 )
 
-# GTKmm 4 GUI
+# ========== GTKmm4 GUI ==========
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTKMM gtkmm-4.0 REQUIRED)
 
@@ -119,13 +117,12 @@ set(GTKMM_SOURCES
 )
 
 set(GTKMM_EXEC_NAME svg_handler_gtk)
-
 add_executable(${GTKMM_EXEC_NAME} ${GTKMM_SOURCES})
 
 target_include_directories(${GTKMM_EXEC_NAME} PRIVATE ${GTKMM_INCLUDE_DIRS})
 target_link_libraries(${GTKMM_EXEC_NAME}
     PRIVATE
-        svg_handler_lib
+        ${LIBRARY_NAME}
         ${GTKMM_LIBRARIES}
 )
 
@@ -141,6 +138,34 @@ set_target_properties(${GTKMM_EXEC_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gui_gtk
 )
 
+# ========== Python Interoperability ==========
+option(BUILD_PYTHON_BINDINGS "Build Python shared library for ctypes or pybind11" ON)
+
+if(BUILD_PYTHON_BINDINGS)
+  message(STATUS "Building shared library for Python interoperability")
+
+  # Shared library with C bindings
+  add_library(svg_handler_python SHARED
+    src/svg_handler.cpp
+    src/svg_reader.cpp
+    src/string_utils.cpp
+    src/tree_utils.cpp
+    src/csv_exporter.cpp
+  )
+
+  target_include_directories(svg_handler_python PRIVATE include)
+  set_target_properties(svg_handler_python PROPERTIES
+      OUTPUT_NAME "svg_handler_py"
+      LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
+  )
+endif()
+
+# ========== Copy Resources ==========
+file(GLOB RESOURCE_FILES "resources/*")
+file(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_BINARY_DIR}/cli/resources)
+file(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_BINARY_DIR}/tests/resources)
+
+# ========== Default Build Type ==========
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the build type" FORCE)
 endif()
